fix(event-room): remove gap, add margin

--- a/src/app/event/event-room/event-room.component.scss
+++ b/src/app/event/event-room/event-room.component.scss
@@ -120,11 +120,7 @@ app-stream {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
   border-radius: 30px;
-  // @include sp {
-  //   padding: 8px;
-  // }
   &__btn {
     width: 48px;
     height: 48px;
@@ -138,9 +134,11 @@ app-stream {
     position: relative;
     cursor: pointer;
     z-index: 0;
+    margin: 0 16px;
     @include sp {
       width: 40px;
       height: 40px;
+      margin: 0 8px;
     }
     &:before {
       content: '';
